# align-server

./: .gitignore  CMakeLists.txt  cmake3_cmd.sh  cmake_opts.bash
cmake/: CMakeLists-gtest.txt  clang-dev-tools.cmake  toolchain_w64-mingw32.cmake
cmake/Modules/: FindIWYU.cmake
ext/: .gitignore  build_all.bash
ext/boost/: .gitignore  README.txt  build_linux-x64.bash  build_w64-mingw32.bash
ext/cpp-netlib/: .gitignore  README.txt  build_linux-x64.bash  build_w64-mingw32.bash
ext/icu4c/: .gitignore  README.txt  build_linux-x64.bash  build_w64-mingw32.bash  icu-config.patch
ext/json/: .gitignore  README.txt  build_linux-x64.bash  build_w64-mingw32.bash
ext/openssl/: .gitignore  README.txt  build_linux-x64.bash  build_w64-mingw32.bash
src/: CMakeLists.txt
src/align_server_app/: .gitignore  CMakeLists.txt  align_api_listener.cc  align_api_listener.h  align_server_app.cc  align_server_app.h  http_msgs_fwd.h  https_listener.cc  https_server.h
src/asio_https/: .gitignore  CMakeLists.txt  asio_https_server.cc  asio_https_server.h  http_msgs.cc  http_msgs.h
src/jwt_verify/: CMakeLists.txt  json_web_token.cc  json_web_token.h  ssl_hmac_hash.cc  ssl_hmac_hash.h
src/main/: .gitignore  CMakeLists.txt  main.cc  options.cc  options.h
src/task_list_app/: https_listener.h  https_server.cc
src/universals/: .gitignore  CMakeLists.txt  escape.cc  escape.h  level_logging.cc  level_logging.h
ssl/: dh512.pem  server.crt  server.csr  server.key.secure  ssl.sh  tokens.txt
test/: CMakeLists.txt
test/jwt_verify/: .gitignore  CMakeLists.txt  test-json_web_token.cc
